feat: add views to article list item
